force-app/main/default/objects/Opportunity/fields/Autorizo__c.field-meta.xml
<CustomField>
    <fullName>Autorizo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Method of Payment</inlineHelpText>
    <label>Autorizo</label>
    <type>Checkbox</type>
</CustomField>