force-app/main/default/objects/Opportunity/fields/Autorizo_a_que_realicen_el_pago__c.field-meta.xml
<CustomField>
    <fullName>Autorizo_a_que_realicen_el_pago__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorizo a que realicen el pago</label>
    <type>Checkbox</type>
</CustomField>