force-app/main/default/objects/Opportunity/fields/Card_Numbertext__c.field-meta.xml
<CustomField>
    <fullName>Card_Numbertext__c</fullName>
    <label>Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>