force-app/main/default/objects/Opportunity/fields/Name_on_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Card__c</fullName>
    <label>Name on Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>