force-app/main/default/objects/Opportunity/fields/No_Autorizo__c.field-meta.xml
<CustomField>
    <fullName>No_Autorizo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Method of Payment</inlineHelpText>
    <label>No Autorizo</label>
    <type>Checkbox</type>
</CustomField>