force-app/main/default/objects/Opportunity/fields/No_autorizo_a_que_realicen_el_pago__c.field-meta.xml
<CustomField>
    <fullName>No_autorizo_a_que_realicen_el_pago__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No autorizo a que realicen el pago</label>
    <type>Checkbox</type>
</CustomField>