force-app/main/default/objects/Opportunity/fields/P_O_Information__c.field-meta.xml
<CustomField>
    <fullName>P_O_Information__c</fullName>
    <label>P.O. Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>