force-app/main/default/objects/Opportunity/fields/Signature_Image__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+SignatureId__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Image</label>
    <type>Text</type>
</CustomField>