force-app/main/default/objects/Opportunity/fields/SignatureId__c.field-meta.xml
<CustomField>
    <fullName>SignatureId__c</fullName>
    <label>SignatureId</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>