force-app/main/default/objects/Opportunity/fields/Type_of_Card__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Card__c</fullName>
    <label>Type of Card</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Method_of_Payment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Master Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>