force-app/main/default/objects/Opportunity/recordTypes/Master_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Master_RecordType</fullName>
    <active>true</active>
    <businessProcess>Master Sales Process</businessProcess>
    <label>Master RecordType</label>
</RecordType>