force-app/main/default/objects/Opportunity/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <businessProcess>Master Sales Process</businessProcess>
    <label>Training</label>
</RecordType>