force-app/main/default/objects/Opportunity/validationRules/Estimated_Start_Date_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Start_Date_and_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Won&quot;), ISBLANK(Estimated_Start_Date__c ), ISBLANK(Estimated_End_Date__c ))</errorConditionFormula>
    <errorMessage>Stage Closed Won must have Estimated Start Date and Estimated End Date.</errorMessage>
</ValidationRule>