force-app/main/default/objects/Opportunity/validationRules/OportunidadProposal_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OportunidadProposal_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;),
    OR(
        ISBLANK( AccountId ),
        ISBLANK( Quote_Title_Details__c ),
        ISBLANK( Estimated_Working_Days__c )
    )
)</errorConditionFormula>
    <errorMessage>Before creating a proposal the following fields must be completed: (Account Name, Quote Title Details, Quote Number and Estimated Working Days)</errorMessage>
</ValidationRule>