force-app/main/default/objects/Opportunity/validationRules/Phases_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Phases_Percentage</fullName>
    <active>false</active>
    <errorConditionFormula>AND( !ISBLANK(Estimated_Start_Date__c), 
     !ISBLANK(Estimated_End_Date__c), 
     ISPICKVAL( StageName, &quot;Closed Won&quot; ), 
     ISPICKVAL(Type_of_Project__c, &quot;Inspection&quot;), 
     OR( ISBLANK(Lab__c ),
         ISBLANK(Execution__c),
         ISBLANK(Report__c),
         ISBLANK(Close__c)  
     )
)</errorConditionFormula>
    <errorDisplayField>Execution__c</errorDisplayField>
    <errorMessage>Debe agregar un porcentaje estimado a cada fase.</errorMessage>
</ValidationRule>