force-app/main/default/objects/Opportunity/validationRules/Porciento_de_Fases_es_mayor_a_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Porciento_de_Fases_es_mayor_a_100</fullName>
    <active>false</active>
    <errorConditionFormula>(Close__c +  Execution__c + Lab__c + Report__c) &gt; 1</errorConditionFormula>
    <errorMessage>La totalidad de los porcentajes para las fases es mayor a 100%</errorMessage>
</ValidationRule>